# browser-use-cubesandbox-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.build.yaml  pyproject.toml
.claude/: settings.json
app/: __init__.py  auth_store.py  config.py  draft_store.py  feishu_form_fill.py  main.py  models.py  prompts.py  run_store.py  runtime_config.py  service.py  sse.py
docs/: agent-form-fill.md
examples/: README.md  feishu-form-fill.input.cancel.sample.json  feishu-form-fill.input.confirm.sample.json  feishu-form-fill.input.edit.sample.json  feishu-form-fill.input.message-confirm.sample.json  feishu-form-fill.input.supplement.sample.json  feishu-form-fill.prepare.sample.json  feishu-form-fill.run.sample.json  feishu-form-fill.submit.sample.json  feishu-profile.sample.json  feishu-run.confirm.sample.json  feishu-run.sample.json  general-chat.full-sample.json  general-chat.sample.json
examples/mcp/: browser_agent_run.example_com.json  browser_agent_run.github_stars.json  feishu_bitable_draft_form.json  feishu_bitable_publish_form.json  feishu_form_fill_prepare.json  feishu_form_fill_submit.json
mcp_server/: client_example.py  server.py
schemas/: mcp.browser_agent_run.input.schema.json  mcp.feishu_bitable_draft_form.input.schema.json  mcp.feishu_bitable_publish_form.input.schema.json  mcp.feishu_form_fill_prepare.input.schema.json  mcp.feishu_form_fill_sse_contract.input.schema.json  mcp.feishu_form_fill_submit.input.schema.json  mcp.tools.catalog.json
scripts/: export_feishu_storage_state.py  run_local.sh  upload_feishu_storage_state.py
